--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ body {
 	margin-left: 0;
 	flex: 1;
 	padding: 60px 80px;
-	background: linear-gradient(135deg, #9FABCB 0%, #4F5565 100%);
+	background: linear-gradient(135deg, #9fabcb 0%, #4f5565 100%);
 	min-height: 100vh;
 	z-index: 1;
 }
@@ -401,7 +401,3 @@ body {
 	justify-content: center;
 	margin-bottom: 12px;
 }
-
-
-
-
