--- a/css/style.css
+++ b/css/style.css
@@ -526,7 +526,12 @@ body {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background: linear-gradient(45deg, transparent 49%, rgba(0, 0, 0, 0.02) 50%, transparent 51%);
+	background: linear-gradient(
+		45deg,
+		transparent 49%,
+		rgba(0, 0, 0, 0.02) 50%,
+		transparent 51%
+	);
 	pointer-events: none;
 }
 
@@ -607,7 +612,12 @@ body {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background: linear-gradient(45deg, transparent 49%, rgba(0, 0, 0, 0.02) 50%, transparent 51%);
+	background: linear-gradient(
+		45deg,
+		transparent 49%,
+		rgba(0, 0, 0, 0.02) 50%,
+		transparent 51%
+	);
 	pointer-events: none;
 }
 
@@ -643,22 +653,22 @@ body {
 }
 
 .placeholder-canvas {
-    width: 300px;
-    height: 300px;
-    min-width: 300px;
-    min-height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: none;
-    margin-bottom: 16px;
-    border-radius: 4px;
-    overflow: hidden;
-    /* Ensure the canvas fills the div */
+	width: 300px;
+	height: 300px;
+	min-width: 300px;
+	min-height: 300px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: none;
+	margin-bottom: 16px;
+	border-radius: 4px;
+	overflow: hidden;
+	/* Ensure the canvas fills the div */
 }
 .placeholder-canvas canvas {
-    width: 100%;
-    height: 100%;
-    display: block;
-    border-radius: 4px;
+	width: 100%;
+	height: 100%;
+	display: block;
+	border-radius: 4px;
 }
